app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-hello
  name: rt-quarkus-hello
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: svc-quarkus-hello
    weight: 100
